--- a/app/css/detailp.css
+++ b/app/css/detailp.css
@@ -105,6 +105,7 @@
       height: 226px;
       width:730px;
       background: url('../images/detail/background.png') no-repeat;
+      /* overflow: hidden; */
   }
   .promPrice_main{
       display: block;
@@ -143,6 +144,7 @@
     height: 52px;
     margin-top:30px;
     margin-bottom: 30px;
+    clear: both;
 }
 .weight dt,.version dt,.color dt, .promPrice_main dt {
     padding-left:13px;
@@ -175,16 +177,15 @@
       widows: 36px;
     }
   .color dd li,.version dd li{
-      width:141px;
+      padding:0 5px;
       height: 36px;
       text-align: center;
-      background:red;
       float:left;
       margin-right:2px;
       border:1px solid #ccc;
   }
   .color dd li span,.version dd li span{
-     line-height: 36px;
+     line-height:36px;
       display: block;
       float:right;
       max-width: 180px;
@@ -193,4 +194,21 @@
       text-overflow: ellipsis;
       color:#666;
       font-size: 12px;
+  }
+  #buycount{
+    height: 100px;
+    width:300px;
+    background: #f50;
+    clear:both;
+    padding-left:10px;
+    margin-top:50px;
+  }
+  #buycount dt{
+    float:left;
+  }
+  #buycount dt span{
+    letter-spacing: 1em;
+  }
+  #buycount dd{
+    float:left;
   }
