--- a/app/css/detailp.css
+++ b/app/css/detailp.css
@@ -105,7 +105,6 @@
       height: 226px;
       width:730px;
       background: url('../images/detail/background.png') no-repeat;
-      /* overflow: hidden; */
   }
   .promPrice_main{
       display: block;
@@ -144,7 +143,6 @@
     height: 52px;
     margin-top:30px;
     margin-bottom: 30px;
-    clear: both;
 }
 .weight dt,.version dt,.color dt, .promPrice_main dt {
     padding-left:13px;
@@ -153,7 +151,7 @@
     height: 20.8px;;
 }
   .weight dt span,.version dt span,.color dt span{
-    letter-spacing: 1em;
+    letter-spacing: .5em;
     display: block;
     height: 36px;
     line-height: 36px;
@@ -177,15 +175,16 @@
       widows: 36px;
     }
   .color dd li,.version dd li{
-      padding:0 5px;
+      width:141px;
       height: 36px;
       text-align: center;
+      background:red;
       float:left;
       margin-right:2px;
       border:1px solid #ccc;
   }
   .color dd li span,.version dd li span{
-     line-height:36px;
+     line-height: 36px;
       display: block;
       float:right;
       max-width: 180px;
@@ -195,79 +194,3 @@
       color:#666;
       font-size: 12px;
   }
-  #buycount{
-    height: 30px;
-    width:165px;
-    /* background: #f50; */
-    clear:both;
-    padding-left:10px;
-    margin-top:50px;
-  }
-  #buycount dt{
-    float:left;
-  }
-  #buycount dt span{
-    letter-spacing: 1em;
-    display: block;
-    height: 36px;
-    line-height: 30px;
-    color: #999;
-  }
-  #buycount dd{
-    float:left;
-  }
-  #buycount dd button{
-    height: 30px;
-    width:22px;
-    outline: none;
-    border:none;
-    font-size: 16px;
-  }
-  #buycount dd input{
-    width:37px;
-    height: 30px;
-    outline: none;
-    text-align: center;
-    line-height: 30px;
-    font-size: 16px;
-  }
- .mainbtns{
-   padding-left:68px;
-   padding-top:30px;
-   position: relative;
- }
- .mainbtns span{
-   display: block;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    width:100px;
-    float:left;
-    margin-left:0px;
- }
- .mainbtns .btnbuy{
-   background: #663200;
-   color: #fff;
-    font: 16px/40px microsoft yahei;
-    font-weight: 600;
-    border-radius: 3px;
-    width: 115px;
-    height: 40px;
-    margin-right:30px;
- }
- .mainbtns .btnaddshop{
-   background: #f50;
-   color: #fff;
-   font: 16px/40px microsoft yahei;
-   font-weight: 600;
-   border-radius: 3px;
-   width: 135px;
-   height: 40px;
- }
- .mainbtns .pl-gouwuche{
-   position: absolute;
-   font-size: 26px;
-   top:36px;
-   left:214px;
-   color:white;
- }
