综合头部和尾部

--- a/app/css/sign_in.css
+++ b/app/css/sign_in.css
@@ -48,7 +48,7 @@ a{
     margin:0 auto;
     min-width:970px;
     height: 570px;
-    background: url(../images/sign_in/0.png) center no-repeat;
+    background: url(https://image.suning.cn/uimg/cms/img/154426033029432354.png) center no-repeat;
 
 }
 .main .form-box{
