准备出发购物车

--- a/app/css/header-footer.css
+++ b/app/css/header-footer.css
@@ -579,9 +579,11 @@ body{
 }
  .footerd-box1 .footerd-boxup{
 	display: block; 
+	width:1000px;
 	border-bottom: 1px solid #ccc;
 	 height: 73px;
 	 padding: 12px;
+	 margin:0 auto;
 	
 	 
 	
