引入公共头部和尾部

--- a/app/css/detailp.scss
+++ b/app/css/detailp.scss
@@ -9,7 +9,8 @@
  .contentp{
      width:1920px;
      margin:0 auto;
-     margin-top:110px;
+     margin-top:30px;
+     margin-left:-60px;
  }
  .detail{
      /* height: 600px; */
