--- a/app/css/indexp.scss
+++ b/app/css/indexp.scss
@@ -1,10 +1,13 @@
 .detailp{
     width:1200px;
+    margin:0 auto;
+    min-height: 200px;
 }
 .detailp li{
-    height: 100px;
-    width:100px;
+    height: 200px;
+    width:200px;
     float:left;
-    margin-left:20px;
+     margin-left:30px;
+     margin-bottom: 30px;
 }
 
