引入头部的详情页头部js不知被谁删了 我明明写的

--- a/app/css/header-footer.scss
+++ b/app/css/header-footer.scss
@@ -511,6 +511,7 @@ body{
 	border: 2px solid #FA0;;
 	left: 80px;
 	bottom: 20px;
+	outline: none;
 	
 }
 #sub{
@@ -527,7 +528,8 @@ body{
 	border: 0;
 	font-family: 'MicroSoft YaHei';
 	background: #FA0;
-    border-radius: 0;
+	border-radius: 0;
+	outline: none;
 }
 .suosuolie{
 	float: left;
