--- a/app/css/detailp.scss
+++ b/app/css/detailp.scss
@@ -255,6 +255,7 @@
     width: 115px;
     height: 40px;
     margin-right:30px;
+    cursor: pointer;
  }
  .mainbtns .btnaddshop{
    background: #f50;
@@ -264,6 +265,7 @@
    border-radius: 3px;
    width: 135px;
    height: 40px;
+   cursor: pointer;
  }
  .mainbtns .pl-gouwuche{
    position: absolute;
