--- a/app/css/header-footer.scss
+++ b/app/css/header-footer.scss
@@ -8,7 +8,8 @@ body{
     width: 100%;
     border-bottom: 1px solid #eee;
     background: #f5f5f5;
-    height: 35px;
+	height: 35px;
+	left:60px;
 }
 #headerd .clear-headerd{
 	clear: both;
@@ -461,7 +462,8 @@ body{
 	height: 110px;
 	min-width: 990px;
 	background:#ffffff;
-	margin-left: 100px;
+	padding-left: 160px;
+	padding-bottom: 38px;
 }
 .suningd .suning-left{
 	display: block;
