--- a/app/css/indexp.scss
+++ b/app/css/indexp.scss
@@ -10,4 +10,21 @@
      margin-left:30px;
      margin-bottom: 30px;
 }
+.detailp li img{
+    height: 200px;
+    width:200px;
+}
+.detailp li:hover{
+    cursor: pointer;
+}
 
+.detailp li:hover img{
+    transition: all 0.3s linear;
+    height: 206px;
+    width: 206px;
+}
+.detailp li img{
+    transition: all 0.3s linear;
+    height: 200px;
+    width: 200px;
+}
